abandon de tailwind

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="scss/main.scss" />
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Caesar+Dressing&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <!-- <h1 class="text-3xl font-bold underline">Hello world!</h1>  ex for tailwindcss -->
@@ -75,8 +81,9 @@
         </article>
         <section>
           <!-- card made by post html -->
+          <extends src="card.html"></extends>
           <!-- V test V -->
-          <div class="h-100 bg-blue-500">tet</div>
+          <!-- <div class="h-100 bg-blue-500">tet</div> -->
         </section>
       </section>
     </main>
