--- a/src/card.html
+++ b/src/card.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" href="scss/main.scss" />
   </head>
   <body>
-    <article class="border-[2px] border-[#279EF8] rounded-[8px]">
+    <article>
       <img src="img/icon/ionicons/outline/Vector (Stroke).svg" alt="" />
       <img src="img/e681940e7fa761d9f8bf427dfd825db2567875d0.png" alt="" />
-      <h3 class="py-8 px-12 bg-[#279EF8]">Titre</h3>
+      <h3>Titre</h3>
       <p>PanthéonType</p>
       <img src="img/icon/Group.svg" alt="" />
       <p>GodType</p>
