--- a/src/index.html
+++ b/src/index.html
@@ -7,108 +7,57 @@
     <link rel="stylesheet" href="scss/main.scss" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Caesar+Dressing&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Bubbler+One&family=Caesar+Dressing&display=swap"
       rel="stylesheet"
     />
   </head>
   <body>
     <header>
-      <a href="">ATLAS DIVIN</a>
-      <nav>
-        <ul>
-          <li>Mes favoris</li>
-          <li>Dieu du jour</li>
-          <li>Dieux populaires</li>
+      <a class="header-logo" href="">ATLAS DIVIN</a>
+      <nav class="header-nav">
+        <ul class="header-nav-categories">
+          <li class="header-nav-categorie">Mes favoris</li>
+          <li class="header-nav-categorie">Dieu du jour</li>
+          <li class="header-nav-categorie">Dieux populaires</li>
         </ul>
-        <button><img src="img/icon/tabler-icons/moon.svg" alt="" /></button>
+        <button class="header-nav-light">
+          <img src="img/icon/tabler-icons/moon.svg" alt="" />
+        </button>
       </nav>
     </header>
     <main>
       <h1>Voir les dieux des panthéons</h1>
+      <extends src="_of-the-day.html"></extends>
       <section>
-        <p>Dieu du jour</p>
-        <h2>Bacchus</h2>
-        <p>
-          Egalement Dieu de l'ivresse, des débordements, de la nature et des
-          festivités.
-        </p>
-        <p>
-          Bacchus est un dieu romain correspondant à Dionysos dans la mythologie
-          grecque. Les Romains utilisaient Bacchus comme un autre nom de Liber
-          Pater, un dieu latin de la fécondité.
-        </p>
-        <a href="">En savoir plus</a>
-      </section>
-      <section>
-        <article>
-          <p>Panthéons populaires</p>
-          <ul>
-            <li>
-              <button>
-                <p>Panthéon Grec</p>
-                <img
-                  src="img/icon/tabler-icons/arrow-narrow-right.svg"
-                  alt=""
-                />
-              </button>
-            </li>
-            <li>
-              <button>
-                <p>Panthéon égyptien</p>
-                <img
-                  src="img/icon/tabler-icons/arrow-narrow-right.svg"
-                  alt=""
-                />
-              </button>
-            </li>
-            <li>
-              <button>
-                <p>Panthéon nordique</p>
-                <img
-                  src="img/icon/tabler-icons/arrow-narrow-right.svg"
-                  alt=""
-                />
-              </button>
-            </li>
-            <li>
-              <button>
-                <p>Panthéon romain</p>
-                <img
-                  src="img/icon/tabler-icons/arrow-narrow-right.svg"
-                  alt=""
-                />
-              </button>
-            </li>
-          </ul>
-        </article>
-        <section>
-          <extends src="card.html"></extends>
-        </section>
+        <extends src="_pantheon-nav.html"></extends>
+        <extends src="_card.html"></extends>
       </section>
     </main>
-    <footer>
-      <nav>
-        <ul>
-          <li>Mes favoris</li>
-          <li>Dieu du jour</li>
-          <li>Dieux populaires</li>
-          <li>Politique de confidentialité</li>
+    <footer class="footer">
+      <nav class="footer-nav">
+        <ul class="footer-nav-categories">
+          <li class="footer-nav-categorie">Mes favoris</li>
+          <li class="footer-nav-categorie">Dieu du jour</li>
+          <li class="footer-nav-categorie">Dieux populaires</li>
+          <li class="footer-nav-categorie">Politique de confidentialité</li>
         </ul>
-        <ul>
-          <li>
+        <ul class="footer-nav-imgs">
+          <li class="footer-nav-img">
             <img
               src="img/icon/icon/jam-icons/outline & logos/youtube.svg"
               alt=""
             />
           </li>
-          <li>
+          <li class="footer-nav-img">
             <img
               src="img/icon/icon/jam-icons/outline & logos/facebook.svg"
               alt=""
             />
           </li>
-          <li>
+          <li class="footer-nav-img">
             <img
               src="img/icon/icon/jam-icons/outline & logos/instagram.svg"
               alt=""
@@ -117,7 +66,7 @@
         </ul>
       </nav>
       <hr />
-      <p>Atlas Divin @ 2025. Tous droits réservés</p>
+      <p class="footer-credit">Atlas Divin @ 2025. Tous droits réservés</p>
     </footer>
     <script src="js/main.js" type="module"></script>
   </body>
