--- a/src/_card.html
+++ b/src/_card.html
@@ -8,16 +8,22 @@
   </head>
   <body>
     <article class="card">
-      <!-- <img
-        class="card-save"
-        src="img/icon/ionicons/outline/Vector (Stroke).svg"
-        alt=""
-      /> -->
-      <img class="card-img" src="img/Card/Frame 1.png" alt="" />
-      <h3 class="card-title">Titre</h3>
-      <p class="card-type">PanthéonType</p>
-      <img class="card-type-img" src="img/icon/Group.svg" alt="" />
-      <p class="card-god-type">GodType</p>
+      <div class="card-top">
+        <img class="card-img" src="img/Dieux-et-déesses/athena.png" alt="" />
+        <img
+          class="card-save"
+          src="img/icon/ionicons/outline/Vector (Stroke).svg"
+          alt=""
+        />
+        <div class="card-title">Titre</div>
+      </div>
+      <article class="card-text">
+        <div class="Panthéon">
+          <p class="card-type">PanthéonType</p>
+          <img class="card-type-img" src="img/icon/Group.svg" alt="" />
+        </div>
+        <p class="card-god-type">GodType</p>
+      </article>
     </article>
 
     <script src="js/main.js" type="module"></script>
