--- a/src/index.html
+++ b/src/index.html
@@ -31,8 +31,20 @@
     <main>
       <h1>Voir les dieux des panthéons</h1>
       <extends src="_of-the-day.html"></extends>
-      <section>
-        <extends src="_pantheon-nav.html"></extends>
+
+      <extends src="_pantheon-nav.html"></extends>
+      <section class="cards">
+        <extends src="_card.html"></extends>
+        <extends src="_card.html"></extends>
+        <extends src="_card.html"></extends>
+        <extends src="_card.html"></extends>
+        <extends src="_card.html"></extends>
+        <extends src="_card.html"></extends>
+        <extends src="_card.html"></extends>
+        <extends src="_card.html"></extends>
+        <extends src="_card.html"></extends>
+        <extends src="_card.html"></extends>
+        <extends src="_card.html"></extends>
         <extends src="_card.html"></extends>
       </section>
     </main>
