--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,13 @@
   <body>
     <header>
       <a class="header-logo" href="">ATLAS DIVIN</a>
-      <nav class="header-nav">
+      <img
+        class="burger-menu"
+        id="burger"
+        src="img/icon/icon/tabler-icons/align-justified.svg"
+        alt=""
+      />
+      <nav class="header-nav" id="nav">
         <ul class="header-nav-categories">
           <li class="header-nav-categorie">Mes favoris</li>
           <li class="header-nav-categorie">Dieu du jour</li>
