--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
         src="img/icon/icon/tabler-icons/align-justified.svg"
         alt=""
       />
-      <nav class="header-nav" id="nav">
+      <nav class="header-nav">
         <ul class="header-nav-categories">
           <li class="header-nav-categorie">Mes favoris</li>
           <li class="header-nav-categorie">Dieu du jour</li>
@@ -34,6 +34,16 @@
         </button>
       </nav>
     </header>
+    <nav id="nav">
+      <ul id="header-nav-categories">
+        <li id="header-nav-categorie">Mes favoris</li>
+        <li id="header-nav-categorie">Dieu du jour</li>
+        <li id="header-nav-categorie">Dieux populaires</li>
+      </ul>
+      <button id="header-nav-light">
+        <img src="img/icon/tabler-icons/moon.svg" alt="" />
+      </button>
+    </nav>
     <main>
       <h1>Voir les dieux des panthéons</h1>
       <extends src="_of-the-day.html"></extends>
