just bonus & change cards

--- a/src/_of-the-day.html
+++ b/src/_of-the-day.html
@@ -22,11 +22,44 @@
       </p>
       <a class="page-card-links" href=""
         ><p class="page-card-link">En savoir plus</p>
-        <img
+
+        <svg
           class="page-card-link-img"
-          src="img/icon/icon/tabler-icons/arrow-narrow-right.svg"
-          alt=""
-        />
+          xmlns="http://www.w3.org/2000/svg"
+          width="24"
+          height="24"
+          viewBox="0 0 24 24"
+          fill="none"
+        >
+          <g clip-path="url(#clip0_105_894)">
+            <path
+              d="M5 12H19"
+              stroke=" var(--dark-grey)"
+              stroke-width="2"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            />
+            <path
+              d="M15 16L19 12"
+              stroke=" var(--dark-grey)"
+              stroke-width="2"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            />
+            <path
+              d="M15 8L19 12"
+              stroke=" var(--dark-grey)"
+              stroke-width="2"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            />
+          </g>
+          <defs>
+            <clipPath id="clip0_105_894">
+              <rect width="24" height="24" fill="white" />
+            </clipPath>
+          </defs>
+        </svg>
       </a>
     </section>
 
