--- a/src/_pantheon-nav.html
+++ b/src/_pantheon-nav.html
@@ -14,25 +14,164 @@
           <li class="pantheon-nav-button">
             <button class="pantheon-grec">
               <p>Panthéon Grec</p>
-              <img src="img/icon/tabler-icons/arrow-narrow-right.svg" alt="" />
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                fill="none"
+              >
+                <g clip-path="url(#clip0_105_894)">
+                  <path
+                    d="M5 12H19"
+                    stroke=" var(--white)"
+                    stroke-width="2"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  />
+                  <path
+                    d="M15 16L19 12"
+                    stroke=" var(--white)"
+                    stroke-width="2"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  />
+                  <path
+                    d="M15 8L19 12"
+                    stroke=" var(--white)"
+                    stroke-width="2"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  />
+                </g>
+                <defs>
+                  <clipPath id="clip0_105_894">
+                    <rect width="24" height="24" fill="white" />
+                  </clipPath>
+                </defs>
+              </svg>
             </button>
           </li>
           <li class="pantheon-nav-button">
             <button class="pantheon-egypt">
               <p>Panthéon égyptien</p>
-              <img src="img/icon/tabler-icons/arrow-narrow-right.svg" alt="" />
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                fill="none"
+              >
+                <g clip-path="url(#clip0_105_894)">
+                  <path
+                    d="M5 12H19"
+                    stroke=" var(--white)"
+                    stroke-width="2"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  />
+                  <path
+                    d="M15 16L19 12"
+                    stroke=" var(--white)"
+                    stroke-width="2"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  />
+                  <path
+                    d="M15 8L19 12"
+                    stroke=" var(--white)"
+                    stroke-width="2"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  />
+                </g>
+                <defs>
+                  <clipPath id="clip0_105_894">
+                    <rect width="24" height="24" fill="white" />
+                  </clipPath>
+                </defs>
+              </svg>
             </button>
           </li>
           <li class="pantheon-nav-button">
             <button class="pantheon-nord">
               <p>Panthéon nordique</p>
-              <img src="img/icon/tabler-icons/arrow-narrow-right.svg" alt="" />
-            </button>
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                fill="none"
+              >
+                <g clip-path="url(#clip0_105_894)">
+                  <path
+                    d="M5 12H19"
+                    stroke=" var(--white)"
+                    stroke-width="2"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  />
+                  <path
+                    d="M15 16L19 12"
+                    stroke=" var(--white)"
+                    stroke-width="2"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  />
+                  <path
+                    d="M15 8L19 12"
+                    stroke=" var(--white)"
+                    stroke-width="2"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  />
+                </g>
+                <defs>
+                  <clipPath id="clip0_105_894">
+                    <rect width="24" height="24" fill="white" />
+                  </clipPath>
+                </defs>
+              </svg>
           </li>
           <li class="pantheon-nav-button">
             <button class="pantheon-romain">
               <p>Panthéon romain</p>
-              <img src="img/icon/tabler-icons/arrow-narrow-right.svg" alt="" />
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                fill="none"
+              >
+                <g clip-path="url(#clip0_105_894)">
+                  <path
+                    d="M5 12H19"
+                    stroke=" var(--white)"
+                    stroke-width="2"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  />
+                  <path
+                    d="M15 16L19 12"
+                    stroke=" var(--white)"
+                    stroke-width="2"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  />
+                  <path
+                    d="M15 8L19 12"
+                    stroke=" var(--white)"
+                    stroke-width="2"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  />
+                </g>
+                <defs>
+                  <clipPath id="clip0_105_894">
+                    <rect width="24" height="24" fill="white" />
+                  </clipPath>
+                </defs>
+              </svg>
             </button>
           </li>
         </ul>
