before post html

--- a/src/_card-blue.html
+++ b/src/_card-blue.html
@@ -18,11 +18,12 @@
       />
     </svg>
 
-    <div class="card-title">Titre</div>
+    <div class="card-title">titre</div>
   </div>
+
   <article class="card-text">
     <div class="Panthéon">
-      <p class="card-type">PanthéonType</p>
+      <p class="card-type">PanthonType</p>
 
       <svg
         class="card-type-img"
