before post html

--- a/src/_card-blue.html
+++ b/src/_card-blue.html
@@ -1,4 +1,4 @@
-<article class="card">
+<article id="blue" class="card">
   <div class="card-top">
     <img class="card-img" src="img/Dieux-et-déesses/athena.png" alt="" />
 
