--- a/src/_card-yellow.html
+++ b/src/_card-yellow.html
@@ -1,4 +1,4 @@
-<article class="card-y">
+<article id="yellow" class="card-y">
   <div class="card-top">
     <img class="card-img" src="img/Dieux-et-déesses/athena.png" alt="" />
 
