--- a/src/index.html
+++ b/src/index.html
@@ -93,19 +93,20 @@
       <extends src="_of-the-day.html"></extends>
 
       <extends src="_pantheon-nav.html"></extends>
+
       <section class="cards">
-        <extends id="blue" src="_card-blue.html"></extends>
-        <extends id="red" src="_card-red.html"></extends>
-        <extends id="yellow" src="_card-yellow.html"></extends>
-        <extends id="green" src="_card-green.html"></extends>
-        <extends id="green" src="_card-green.html"></extends>
-        <extends id="red" src="_card-red.html"></extends>
-        <extends id="blue" src="_card-blue.html"></extends>
-        <extends id="yellow" src="_card-yellow.html"></extends>
-        <extends id="blue" src="_card-blue.html"></extends>
-        <extends id="red" src="_card-red.html"></extends>
-        <extends id="green" src="_card-green.html"></extends>
-        <extends id="yellow" src="_card-yellow.html"></extends>
+        <extends src="_card-blue.html"></extends>
+        <extends src="_card-red.html"></extends>
+        <extends src="_card-yellow.html"></extends>
+        <extends src="_card-green.html"></extends>
+        <extends src="_card-green.html"></extends>
+        <extends src="_card-red.html"></extends>
+        <extends src="_card-blue.html"></extends>
+        <extends src="_card-yellow.html"></extends>
+        <extends src="_card-blue.html"></extends>
+        <extends src="_card-red.html"></extends>
+        <extends src="_card-green.html"></extends>
+        <extends src="_card-yellow.html"></extends>
       </section>
     </main>
     <footer class="footer">
