--- a/src/_card-red.html
+++ b/src/_card-red.html
@@ -1,4 +1,4 @@
-<article class="card-r">
+<article id="red" class="card-r">
   <div class="card-top">
     <img class="card-img" src="img/Dieux-et-déesses/athena.png" alt="" />
 
