posthtml ne marche pas

--- a/src/_card-green.html
+++ b/src/_card-green.html
@@ -18,7 +18,7 @@
       />
     </svg>
 
-    <div class="card-title-g">titre</div>
+    <div class="card-title-g">{{ title }}</div>
   </div>
 
   <article class="card-text">
