--- a/src/index.html
+++ b/src/index.html
@@ -98,7 +98,7 @@
         <extends src="_card-blue.html"></extends>
         <extends src="_card-red.html"></extends>
         <extends src="_card-yellow.html"></extends>
-        <extends src="_card-green.html"></extends>
+        <extends src="_card-green.html" locals='{"title": "Freya"}'></extends>
         <extends src="_card-green.html"></extends>
         <extends src="_card-red.html"></extends>
         <extends src="_card-blue.html"></extends>
