--- a/src/_card-green.html
+++ b/src/_card-green.html
@@ -1,6 +1,6 @@
 <article class="card-g">
   <div class="card-top">
-    <img class="card-img" src="img/Dieux-et-déesses/athena.png" alt="" />
+    <img class="card-img" src="{{ img }}" />
 
     <svg
       class="card-save"
@@ -23,7 +23,7 @@
 
   <article class="card-text">
     <div class="Panthéon">
-      <p class="card-type">PanthonType</p>
+      <p class="card-type">{{ PanthonType }}</p>
 
       <svg
         xmlns="http://www.w3.org/2000/svg"
@@ -38,6 +38,6 @@
         />
       </svg>
     </div>
-    <p class="card-god-type">GodType</p>
+    <p class="card-god-type">{{ GodType }}</p>
   </article>
 </article>
