--- a/src/index.html
+++ b/src/index.html
@@ -95,18 +95,54 @@
       <extends src="_pantheon-nav.html"></extends>
 
       <section class="cards">
-        <extends src="_card-blue.html"></extends>
-        <extends src="_card-red.html"></extends>
-        <extends src="_card-yellow.html"></extends>
-        <extends src="_card-green.html" locals='{"title": "Freya"}'></extends>
-        <extends src="_card-green.html"></extends>
-        <extends src="_card-red.html"></extends>
-        <extends src="_card-blue.html"></extends>
-        <extends src="_card-yellow.html"></extends>
-        <extends src="_card-blue.html"></extends>
-        <extends src="_card-red.html"></extends>
-        <extends src="_card-green.html"></extends>
-        <extends src="_card-yellow.html"></extends>
+        <extends
+          src="_card-blue.html"
+          locals='{"title": "athena","PanthonType": "Panthéon grec","GodType": "Déesse de la guerre","img": "img/Dieux-et-déesses/athena.png"}'
+        ></extends>
+        <extends
+          src="_card-red.html"
+          locals='{"title": "Mars","PanthonType": "Panthéon romain","GodType": "Dieu de la guerre","img": "img/Dieux-et-déesses/mars.png"}'
+        ></extends>
+        <extends
+          src="_card-yellow.html"
+          locals='{"title": "Ra","PanthonType": "Panthéon égyptien","GodType": "Dieu créateur","img": "img/Dieux-et-déesses/ra.png"}'
+        ></extends>
+        <extends
+          src="_card-green.html"
+          locals='{"title": "Freya","PanthonType": "Panthéon nordique","GodType": "Déesse de la fertilité","img": "img/Dieux-et-déesses/freya.png"}'
+        ></extends>
+        <extends
+          src="_card-green.html"
+          locals='{"title": "Loki","PanthonType": "Panthéon nordique","GodType": "Dieu du chaos","img": "img/Dieux-et-déesses/loki.png"}'
+        ></extends>
+        <extends
+          src="_card-red.html"
+          locals='{"title": "Fortuna","PanthonType": "Panthéon romain","GodType": "Déesse de la bonne fortune","img": "img/Dieux-et-déesses/fortuna.png"}'
+        ></extends>
+        <extends
+          src="_card-blue.html"
+          locals='{"title": "Artémis","PanthonType": "Panthéon grec","GodType": "Déesse de la chasse","img": "img/Dieux-et-déesses/artemis.png"}'
+        ></extends>
+        <extends
+          src="_card-yellow.html"
+          locals='{"title": "Anubis","PanthonType": "Panthéon égyptien","GodType": "Dieu funéraire","img": "img/Dieux-et-déesses/anubis.png"}'
+        ></extends>
+        <extends
+          src="_card-blue.html"
+          locals='{"title": "Zeus","PanthonType": "Panthéon grec","GodType": "Dieu du ciel","img": "img/Dieux-et-déesses/zeus.png"}'
+        ></extends>
+        <extends
+          src="_card-red.html"
+          locals='{"title": "Lucifer","PanthonType": "Panthéon romain","GodType": "Dieu des étoiles","img": "img/Dieux-et-déesses/lucifer.png"}'
+        ></extends>
+        <extends
+          src="_card-green.html"
+          locals='{"title": "Hel","PanthonType": "Panthéon nordique","GodType": "Déesse des enfers","img": "img/Dieux-et-déesses/hel.png"}'
+        ></extends>
+        <extends
+          src="_card-yellow.html"
+          locals='{"title": "Isis","PanthonType": "Panthéon égyptien","GodType": "Déesse mère","img": "img/Dieux-et-déesses/isis.png"}'
+        ></extends>
       </section>
     </main>
     <footer class="footer">
