--- a/src/_card-blue.html
+++ b/src/_card-blue.html
@@ -1,6 +1,6 @@
 <article id="blue" class="card">
   <div class="card-top">
-    <img class="card-img" src="img/Dieux-et-déesses/athena.png" alt="" />
+    <img class="card-img" src="{{ img }}" alt="" />
 
     <svg
       class="card-save"
@@ -18,12 +18,12 @@
       />
     </svg>
 
-    <div class="card-title">titre</div>
+    <div class="card-title">{{ title }}</div>
   </div>
 
   <article class="card-text">
     <div class="Panthéon">
-      <p class="card-type">PanthonType</p>
+      <p class="card-type">{{ PanthonType }}</p>
 
       <svg
         class="card-type-img"
@@ -39,6 +39,6 @@
         />
       </svg>
     </div>
-    <p class="card-god-type">GodType</p>
+    <p class="card-god-type">{{ GodType }}</p>
   </article>
 </article>
